[gd_scene load_steps=74 format=3 uid="uid://drsgtfmsdt5cn"]

[ext_resource type="Script" path="res://scenes/characters/player/player.gd" id="1_iwona"]
[ext_resource type="Shader" path="res://scenes/characters/enemies/hurt_effect.gdshader" id="2_e3fis"]
[ext_resource type="Texture2D" uid="uid://c1ukrg8p4sx0" path="res://assets/player_animations.png" id="2_w74s1"]
[ext_resource type="PackedScene" uid="uid://d4ehve8tkntur" path="res://scenes/components/hit_component.tscn" id="8_l5dvy"]
[ext_resource type="PackedScene" uid="uid://do88igja7lo2g" path="res://scenes/components/hurt_component.tscn" id="9_y6oe0"]
[ext_resource type="Script" path="res://scenes/characters/player/states/degub/state_name_displayer.gd" id="11_jee3i"]
[ext_resource type="Script" path="res://scenes/characters/player/player_state_machine.gd" id="12_4aidw"]
[ext_resource type="Script" path="res://scenes/characters/player/states/movement/move_state.gd" id="12_5lm7b"]
[ext_resource type="Script" path="res://scenes/characters/player/states/movement/idle_state.gd" id="12_asvfg"]
[ext_resource type="Script" path="res://scenes/characters/player/dash_cooldown_label.gd" id="12_wy4hh"]
[ext_resource type="Script" path="res://scenes/characters/player/states/movement/dash_state.gd" id="14_072ad"]
[ext_resource type="Script" path="res://scenes/characters/player/states/combat/attack_state.gd" id="15_7nsbl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_neoya"]
shader = ExtResource("2_e3fis")
shader_parameter/damage = 0.0
shader_parameter/damage_color = Vector4(1, 0, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_gchh7"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l461"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlbm"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7wts"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d55g0"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0i3c"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a6t8"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygnup"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv0qk"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5k5n"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig66h"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_strcr"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu1a0"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohhor"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvm6v"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f30j"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1chdv"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smgdb"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vjjr"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1w0s"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt187"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oywgi"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8sxw"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41tua"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ajo"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvmwt"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35qbm"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsfuq"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btlhm"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6c8g"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r35sf"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tfyk"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pifmm"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7l8"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22vxy"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltope"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06rwi"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfpt7"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efqpi"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ftc"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x7ft"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0gp1"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qqhc"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjy2d"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtam0"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw34"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu38p"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jh7s"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x83fv"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x06pg"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm0nj"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss20y"]
atlas = ExtResource("2_w74s1")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2ypw"]
atlas = ExtResource("2_w74s1")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_562le"]
atlas = ExtResource("2_w74s1")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irfh6"]
atlas = ExtResource("2_w74s1")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g41o8"]
atlas = ExtResource("2_w74s1")
region = Rect2(0, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2yeur"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gchh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l461")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7wts")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d55g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0i3c")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a6t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygnup")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv0qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5k5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv0qk")
}],
"loop": false,
"name": &"jab_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig66h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_strcr")
}],
"loop": false,
"name": &"jab_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu1a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohhor")
}],
"loop": false,
"name": &"jab_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvm6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f30j")
}],
"loop": false,
"name": &"jab_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1chdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smgdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vjjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1w0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt187")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oywgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8sxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41tua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ajo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvmwt")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35qbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsfuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btlhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6c8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r35sf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tfyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pifmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7l8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22vxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltope")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06rwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfpt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efqpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ftc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x7ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0gp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qqhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjy2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtam0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw34")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu38p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jh7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x83fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x06pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm0nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss20y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2ypw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_562le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irfh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g41o8")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdq45"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rshik"]
radius = 4.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rjj0o"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_iwona")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_neoya")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_2yeur")
animation = &"jab_down"
autoplay = "idle_down"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_xdq45")

[node name="HitComponent" parent="." instance=ExtResource("8_l5dvy")]
collision_layer = 2
collision_mask = 4
damage = 5

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(0, -15)
shape = SubResource("CircleShape2D_rshik")
debug_color = Color(0.964509, 0.175807, 0.181407, 0.42)

[node name="HurtComponent" parent="." instance=ExtResource("9_y6oe0")]
collision_layer = 2
collision_mask = 4

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_rjj0o")
debug_color = Color(0.89833, 0.314466, 0, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("start_state")]
script = ExtResource("12_4aidw")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "animated_sprite")]
script = ExtResource("12_asvfg")
player = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Move" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "animated_sprite")]
script = ExtResource("12_5lm7b")
player = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Dash" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("player", "animated_sprite")]
script = ExtResource("14_072ad")
player = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="CooldownTimer" type="Timer" parent="PlayerStateMachine/Dash"]
one_shot = true

[node name="Attack" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("hit_component_collision_shape", "player", "animated_sprite")]
script = ExtResource("15_7nsbl")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")
attack_range = null
attack_trigger_range = null
player = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="StateNameDisplayer" type="Label" parent="." node_paths=PackedStringArray("character_body")]
visible = false
offset_left = -20.0
offset_top = -55.0
offset_right = 20.0
offset_bottom = -32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Idle"
horizontal_alignment = 1
script = ExtResource("11_jee3i")
character_body = NodePath("..")

[node name="DashCooldownLabel" type="Label" parent="." node_paths=PackedStringArray("character_body", "cooldown_timer")]
offset_left = -20.0
offset_top = -75.0
offset_right = 20.0
offset_bottom = -52.0
text = "1.3"
script = ExtResource("12_wy4hh")
character_body = NodePath("..")
cooldown_timer = NodePath("../PlayerStateMachine/Dash/CooldownTimer")

[connection signal="state_changed" from="PlayerStateMachine" to="StateNameDisplayer" method="_on_state_machine_state_changed"]
